Fix bug where the button would flip if page was reloaded and was last set to dark mode

--- a/css/meme.css
+++ b/css/meme.css
@@ -37,7 +37,8 @@ img {
 
 /* Thx @mallendeo :^) */
 /* https://codepen.io/mallendeo/pen/eLIiG */
-.tgl {
+.tgl,
+.hidden {
   display: none;
 }
 
